Fixed overlapping of footer with body

--- a/src/styles/HomePage.css
+++ b/src/styles/HomePage.css
@@ -1,7 +1,7 @@
 .Container {
     /*"backgroundImage": url('https://wallpaperaccess.com/full/5651999.jpg');*/
-    background-color: #ffffff;
-    "height": 100vh;
+    "background-color": #ffffff;
+    "max-height": 90vh;
     "marginTop": -70px;
     "fontSize": 50px;
     "backgroundSize": cover;
